--- a/_includes/swc/who.html
+++ b/_includes/swc/who.html
@@ -1,8 +1,12 @@
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is aimed at vacation students and other researchers and staff at CSIRO's Energy Centre in Newcastle.
   <strong>
     You don't need to have any previous knowledge of the tools
     that will be presented at the workshop.
   </strong>
+  The focus will be on the Unix Shell, a classic piece of software for powerfully combining other software programs into a custom workflow.
+It's required knowledge for using "high-performance computing” supercomputers, but also for automating day-to-day tasks on your personal workstation.
+ 
+This course will (hopefully) be the first of many, with later lessons covering Version Control, a programming language (such as Python, R or Julia) and Data Science tools.
 </p>
